@@ -1,5 +1,7 @@
 class MeteorController < ApplicationController
   layout nil
+  caches_action :strike
+  after_filter :notify_execution, :only => :strike
 
   def strike
     @channel = params[:channel].split('/').map{|i| CGI.escape(i)}.join('/')
@@ -10,7 +12,6 @@ class MeteorController < ApplicationController
       @javascript = %Q[setTimeout(function(){
         meteorStrike.event[#{@channel.to_json}](#{params.to_json});}, 0);]
     end
-    Meteor.shooter.executed(params[:sig], params[:id])
   end
 
   def update
@@ -21,5 +22,10 @@ class MeteorController < ApplicationController
 
   def sweep
     Meteor.shooter.sweep
+  end
+
+private
+  def notify_execution
+    Meteor.shooter.executed(params[:sig], params[:id])
   end
 end
