@@ -1,8 +1,10 @@
 *** 1.0.4 / 2007-03-24
 + 1 major enhancement:
   + Cached rendering result of meteor/strike.
-+ 1 minor enhancement:
++ 3 minor enhancements:
   + Disabled caching when back.
+  + Added meteor_helper.
+  + Added workaround for Safari's strange behaviour after back navigation.
 + 1 minor bugfix:
   + Solved problem on caching of browsers of MacOS.
 
